--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       context: ./socket-server-example
       dockerfile: Dockerfile
     command: ["/bin/sh", "-c", "npm install && npm run dev"]
+    volumes:
+      - ./socket-server-example:/usr/app/
+      - ./socket-server-example/node_modules:/usr/app/node_modules
     ports:
       - "3333:3333"
     networks:
@@ -18,6 +21,9 @@ services:
       context: ./socket-chat-example
       dockerfile: Dockerfile
     command: ["/bin/sh", "-c", "npm install && npm run dev"]
+    volumes:
+      - ./socket-chat-example:/usr/app/
+      - ./socket-chat-example/node_modules:/usr/app/node_modules
     ports:
       - "3000:3000"
     networks:
